Fix: Implement persistent light/dark theme toggle
Screenshot: https://storage.googleapis.com/screenshot-production-us-central1/17545504-36d4-436c-840b-9a21a6871b08/a42fb58d-9380-4c6d-b52f-b3570a6c63bc.jpg

--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
+    <title>Lish - Your Personal Nutrition Assistant</title>
+    <script>
+      // Initialize theme before page loads to prevent flashing
+      (function() {
+        const storedTheme = localStorage.getItem('theme');
+        const systemTheme = window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light';
+        const theme = storedTheme || systemTheme;
+
+        if (theme === 'dark') {
+          document.documentElement.classList.add('dark');
+        } else {
+          document.documentElement.classList.remove('dark');
+        }
+      })();
+    </script>
   </head>
   <body>
     <div id="root"></div>
